separate functions, create aliquot and deplete, update retrieve_all

--- a/Examples/add_samples_page.html
+++ b/Examples/add_samples_page.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-	<form action = "add_samples.php" method = "post">
+	<form action = "add_samples_page.php" method = "post">
 
 	Sample 0 <br>
 	Aliquots: <input type = "text" name = "all_samples[sample0][aliquots]"> <br>
