--- a/Examples/deplete_page.html
+++ b/Examples/deplete_page.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-	<form action = "deplete_tubes.php" method = "post">
+	<form action = "deplete_page.php" method = "post">
 
 	TUBES TO DELETE<br>
 	Tube 1: <input type = "number" name = "delete_ids[tube1]"> <br>
