--- a/Examples/add_shipments_page.html
+++ b/Examples/add_shipments_page.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-	<form action = "add_shipments.php" method = "post">
+	<form action = "add_shipments_page.php" method = "post">
 
 	BATCH INFORMATION <br>
 	Date: <input type = "text" name = "batch[date]"> <br>
